--- a/template/pandoctpl.html
+++ b/template/pandoctpl.html
@@ -31,7 +31,7 @@ $for(header-includes)$
 $header-includes$
 $endfor$
 
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 <script>
 jQuery(document).ready(function(){
     jQuery('pre').each(function(){
